--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,10 +1,11 @@
 .topnav {
   overflow: hidden;
-  background-color: #333;
+  /* background-color: rgb(148, 148, 148); */
+  background-color: #85b1f0;
   position: fixed; /* Set the navbar to fixed position */
   top: 0; /* Position the navbar at the top of the page */
   width: 100%; /* Full width */
-  z-index:1000;//add z-index
+  z-index:1000;/*add z-index*/
 }
 
 .topnav a {
@@ -18,7 +19,7 @@
 
 .topnav a:hover {
   background-color: #ddd;
-  color: black;
+  color: #bcaa6c;
 }
 
 .topnav a.active {
@@ -27,14 +28,14 @@
 }
 
 .hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url("../images/aayush-gupta_Lisbon_Tram.jpg");
+  /* linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), */
+  background-image:  url("../images/aayush-gupta_Lisbon_Tram.jpg");
   height: 150%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
 }
-
 
 .hero-text {
   text-align: center;
@@ -43,9 +44,20 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: #B3CEF3;
+  color: #000000;
+  /* mix-blend-mode: difference; */
+  filter: invert(1) contrast(9);
+  
 }
 
+.container-interests {
+  padding: 10px;
+  height: 80%;
+}
+.container-interests p {
+  /* text-align: center; */
+  position: auto;
+}
 .w3-row-padding img {margin-bottom: 12px}
 /* Set the width of the sidebar to 120px */
 .w3-sidebar {width: 120px;background: #222;}
@@ -53,8 +65,8 @@
 .w3-padding-16{padding-top:16px!important;padding-bottom:16px!important}
 .w3-wide{letter-spacing:4px}
 
-.w3-white,.w3-hover-white:hover{color:#000!important;background-color:#fff!important}
-.w3-dark-grey,.w3-hover-dark-grey:hover,.w3-dark-gray,.w3-hover-dark-gray:hover{color:#fff!important;background-color:#616161!important}
+.w3-white,.w3-hover-white:hover{color:#EDAA75!important;background-color:#E3D49F!important}
+.w3-dark-grey,.w3-hover-dark-grey:hover,.w3-dark-gray,.w3-hover-dark-gray:hover{color:#fff!important;background-color:#EDAA75!important}
 .w3-text-light-grey,.w3-hover-text-light-grey:hover,.w3-text-light-gray,.w3-hover-text-light-gray:hover{color:#f1f1f1!important}
 
 .pagination a {
@@ -103,13 +115,15 @@
 .column-66 {
   float: left;
   width: 66.66666%;
-  padding: 20px;
+  /* padding: 20px; */
 }
 
 .column-33 {
   float: left;
-  width: 33.33333%;
+  float: left;
+  width: 66.66666%;
   padding: 20px;
+  background-color: #b6d0f5;
 }
 
 .large-font {
@@ -145,4 +159,29 @@ img {
   img {
     margin: auto;
   }
+}
+
+
+.href:link {
+  color: #e0cd88;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+.href:visited {
+  color: pink;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+.href:hover {
+  color: #EDAA75;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+.href:active {
+  color: yellow;
+  background-color: transparent;
+  text-decoration: underline;
 }
