--- a/static/css/main.css
+++ b/static/css/main.css
@@ -29,7 +29,7 @@
 
 .hero-image {
   /* linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), */
-  background-image:  url("../images/aayush-gupta_Lisbon_Tram.jpg");
+  background-image:  linear-gradient(rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0.05)),url("../images/aayush-gupta_Lisbon_Tram.jpg");
   height: 150%;
   background-position: center;
   background-repeat: no-repeat;
@@ -55,15 +55,15 @@
   height: 80%;
 }
 .container-interests p {
-  /* text-align: center; */
-  position: auto;
+  text-align: left;
+  /* position: auto; */
 }
 .w3-row-padding img {margin-bottom: 12px}
 /* Set the width of the sidebar to 120px */
 .w3-sidebar {width: 120px;background: #222;}
 /* Add a left margin to the "page content" that matches the width of the sidebar (120px) */
 .w3-padding-16{padding-top:16px!important;padding-bottom:16px!important}
-.w3-wide{letter-spacing:4px}
+.w3-wide{letter-spacing:4px;position: auto;}
 
 .w3-white,.w3-hover-white:hover{color:#EDAA75!important;background-color:#E3D49F!important}
 .w3-dark-grey,.w3-hover-dark-grey:hover,.w3-dark-gray,.w3-hover-dark-gray:hover{color:#fff!important;background-color:#EDAA75!important}
@@ -119,7 +119,6 @@
 }
 
 .column-33 {
-  float: left;
   float: left;
   width: 66.66666%;
   padding: 20px;
