--- a/static/css/main.css
+++ b/static/css/main.css
@@ -135,6 +135,15 @@
   font-size: 48px;
 }
 
+.title {
+  font-size: 48px;
+  text-align: center;
+  /* position: absolute; */
+  top: 0px;
+  right: -100px;
+  z-index: 1;
+}
+
 .xlarge-font {
   font-size: 64px
 }
