--- a/static/css/main.css
+++ b/static/css/main.css
@@ -188,6 +188,7 @@ img {
     z-index:1000;
     overflow: hidden; 
     position: fixed;
+    width: 100%; /* Full width */
   }
   
   .topnav.responsive a {
@@ -204,7 +205,9 @@ img {
     right: 0;
     top: 0;
   }
-
+img{
+  width: 100%;
+}
 }
 
 
