--- a/static/css/main.css
+++ b/static/css/main.css
@@ -205,9 +205,16 @@ img {
     right: 0;
     top: 0;
   }
-img{
-  width: 100%;
-}
+  .hero-image {
+    /* linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), */
+    background-image:  linear-gradient(rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0.05)),url("../images/aayush-gupta_Lisbon_Tram.jpg");
+    height: 150%;
+    width: auto;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+  }
 }
 
 
