--- a/static/css/main.css
+++ b/static/css/main.css
@@ -56,16 +56,24 @@
   
 }
 
-.container-interests {
-  padding: 10px;
+.container {
+  padding: 64px;
   height: 80%;
 }
-.container-interests p {
-  text-align: right;
-  position: center;
+
+.container-interests {
+  padding: 20px;
+  height: 100%;
 }
+
+.grid-text {
+  display: grid;
+  /* align-items: center; */
+  justify-items: center;
+}
+
 /* Add a left margin to the "page content" that matches the width of the sidebar (120px) */
-.w3-wide{letter-spacing:4px;position: auto;color:#E69C34;}
+.w3-wide{font-weight: bold;color:#E69C34;}
 .w3-orange{color:#EDAA75!important;background-color:#E3D49F!important}
 .w3-dark-orange{color:#fff!important;background-color:#EDAA75!important}
 
@@ -83,22 +91,16 @@
 
 .grid-container > div {
   background-color: rgba(255, 255, 255, 0.8);
-  text-align: center;
   padding: 20px 0;
   font-size: 30px;
 }
 
 
-.container {
-  padding: 64px;
-  height: 80%;
-}
-
-.row:after {
+/* .row:after {
   content: "";
-  display: table;
+  display: block;
   clear: both;
-}
+} */
 
 .column-bio-text {
   float: left;
@@ -121,7 +123,7 @@
 .column-66 {
   float: left;
   width: 66.66666%;
-  /* padding: 20px; */
+  padding: 20px;
 }
 
 .column-33 {
@@ -182,7 +184,11 @@ img {
 
 @media screen and (max-width: 1000px) {
   .column-66,
-  .column-33,.column-bio-text{
+  .column-33 {
+    width: auto;
+    padding: 20px;
+  }
+  .column-bio-text{
     width: 100%;
     text-align: center;
   }
@@ -194,13 +200,14 @@ img {
     top: -30px;
     right: 20px; 
   }
+  
   .grid-container{
-    width: 90%;
+    display: grid;
+    width: auto;
     gap: 10px;
     background-color: #4d7dc0;
     padding: 10px;
-    /* align-content: center;
-    justify-content: center; */
+    position: relative;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   }
   .grid-text {
@@ -222,7 +229,6 @@ img {
     width: 100%;
     height: auto;
   }
-
   .topnav a:not(:first-child) {display: none;}
   .topnav a.icon {
     float: right;
