--- a/static/css/my_projects.css
+++ b/static/css/my_projects.css
@@ -6,9 +6,10 @@ html {
 }
 
 body {
-    background-image:linear-gradient(to bottom right, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)), url("../images/magda_b_Ocean.jpg");
-    height: 100%;
-    background-position: center bottom;
+    background-image:linear-gradient(to bottom right, rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0.05)), url("../images/magda_b_Ocean.jpg");
+    height: 150%;
+    width: auto;
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
@@ -19,7 +20,7 @@ h2 {
 }
 
 p {
-  color: #FFB81C;
+  color: #ffc039;
 }
 .column {
   float: left;
@@ -29,15 +30,10 @@ p {
   height: max-content;
 }
 
-@media screen and (max-width: 650px) {
-  .column {
-    width: 100%;
-    display: block;
-  }
-}
 
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  background-color: #333333b3;
 }
 
 .container {
@@ -74,11 +70,16 @@ p {
 }
 .topnav {
   overflow: hidden;
-  background-color: #333;
+  background-color: #7ba0d5;
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  width: 100%; /* Full width */
+  z-index:1000;/*add z-index*/
 }
 
 .topnav a {
   float: left;
+  display: block;
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
@@ -88,10 +89,48 @@ p {
 
 .topnav a:hover {
   background-color: #ddd;
-  color: black;
+  color: #bcaa6c;
 }
 
 .topnav a.active {
   background-color: #EED787;
   color: grey;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 1000px) {
+  .column {
+    width: 100%;
+    display: block;
+  }
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+  .topnav.responsive {
+    /* top: 0; Position the navbar at the top of the page */
+    z-index:1000;
+    overflow: hidden; 
+    position: fixed;
+    width: 100%; /* Full width */
+  }
+  
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+    /* background-color: #EED787; */
+    color: grey;
+    padding: 14px 16px;
+    z-index:1000;
+  }
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
 }
