--- a/static/css/my_projects.css
+++ b/static/css/my_projects.css
@@ -106,7 +106,7 @@ p {
     width: 100%;
     display: block;
   }
-  .topnav a:not(:first-child) {display: none;}
+  .topnav a:not(:nth-child(2)) {display: none;}
   .topnav a.icon {
     float: right;
     display: block;
