--- a/static/css/my_projects.css
+++ b/static/css/my_projects.css
@@ -22,35 +22,6 @@ h2 {
 p {
   color: #ffc039;
 }
-.column {
-  float: left;
-  width: 33.3%;
-  margin-bottom: 16px;
-  padding: 0 8px;
-  height: max-content;
-}
-
-
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  background-color: #333333b3;
-}
-
-.container {
-  padding: 0 16px;
-}
-
-.container::after, .row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-.title {
-  color: lightgrey;
-}
-
-
 
 .button {
   border: none;
@@ -68,9 +39,41 @@ p {
 .button:hover {
   background-color: #94b1c9;
 }
+
+.column {
+  float: left;
+  width: 33.3%;
+  margin-bottom: 16px;
+  padding: 0 8px;
+  height: max-content;
+}
+
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  /* background-color: #333333b3; */
+}
+
+.container {
+  padding: 0 16px;
+}
+
+.container::after, .row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.title {
+  color: lightgrey;
+}
+.dark-background{
+  background-color: #333333b3;
+}
+
 .topnav {
   overflow: hidden;
-  background-color: #7ba0d5;
+  background-color: #8eb7f1;
   position: fixed; /* Set the navbar to fixed position */
   top: 0; /* Position the navbar at the top of the page */
   width: 100%; /* Full width */
