--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,6 @@
+body{
+  margin: 0;
+}
 .topnav {
   overflow: hidden;
   /* background-color: rgb(148, 148, 148); */
@@ -6,6 +9,7 @@
   top: 0; /* Position the navbar at the top of the page */
   width: 100%; /* Full width */
   z-index:1000;/*add z-index*/
+  left: 0;
 }
 
 .topnav a {
