--- a/static/css/my_projects.css
+++ b/static/css/my_projects.css
@@ -1,18 +1,13 @@
 html {
-  box-sizing: border-box;
+  min-height: 100%;
+  background-image:linear-gradient(to bottom right, rgba(0, 0, 0, 0.05),
+  rgba(0, 0, 0, 0.05)), url("../images/magda_b_Ocean.jpg");
+  background-position: left 0 top 0;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-
 body {
-    background-image:linear-gradient(to bottom right, rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0.05)), url("../images/magda_b_Ocean.jpg");
-    height: 150%;
-    width: auto;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
+  padding: 20px;
 }
 
 h2 {
@@ -40,6 +35,25 @@ p {
   background-color: #94b1c9;
 }
 
+.button_gallery{
+  border: none;
+  outline: none;
+  padding: 12px 16px;
+  cursor: pointer;
+  background-color: #EED787;
+  color: grey;
+}
+
+.button_gallery:hover{
+  background-color: #ebc84c;
+  color: grey;
+}
+
+.button_gallery_active{
+  background-color: #e9b702;
+  color: #18669a;
+}
+
 .column {
   float: left;
   width: 33.3%;
@@ -52,28 +66,54 @@ p {
 
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  /* background-color: #333333b3; */
+  background-color: #333333b3;
+  padding: 16px;
+  /* width: 20em; 
+  height: 28em;  */
+  margin: 0 auto;
+}
+
+.card_image{
+  height: 50%;
+  width: 75%;
+  padding-left: 45px;
+  padding-top: 15px;
 }
 
 .container {
-  padding: 0 16px;
+  padding: 16px;
 }
 
-.container::after, .row::after {
+.container::after {
   content: "";
   clear: both;
   display: table;
 }
 
-.title {
-  color: lightgrey;
+
+.row {
+  margin: 10px -16px;
 }
-.dark-background{
-  background-color: #333333b3;
+
+/* Add padding BETWEEN each column */
+.row,
+.row > .column {
+  padding: 8px;
+}
+
+/* Clear floats after rows */ 
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
 .show{
   display: block;
+}
+
+.title {
+  color: lightgrey;
 }
 
 .topnav {
@@ -83,6 +123,7 @@ p {
   top: 0; /* Position the navbar at the top of the page */
   width: 100%; /* Full width */
   z-index:1000;/*add z-index*/
+  left: 0;
 }
 
 .topnav a {
@@ -109,10 +150,10 @@ p {
   display: none;
 }
 
-@media screen and (max-width: 1000px) {
+/* @media screen and (max-width: 1000px) {
   .column {
     width: 100%;
-    display: block;
+    display: none;
   }
   .topnav a:not(:nth-child(2)) {display: none;}
   .topnav a.icon {
@@ -120,18 +161,16 @@ p {
     display: block;
   }
   .topnav.responsive {
-    /* top: 0; Position the navbar at the top of the page */
     z-index:1000;
     overflow: hidden; 
     position: fixed;
-    width: 100%; /* Full width */
+    width: 100%; 
   }
   
   .topnav.responsive a {
     float: none;
     display: block;
     text-align: left;
-    /* background-color: #EED787; */
     color: grey;
     padding: 14px 16px;
     z-index:1000;
@@ -141,4 +180,4 @@ p {
     right: 0;
     top: 0;
   }
-}
+} */
